syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "Duration.proto";
import "Timestamp.proto";
import "BasicTypes.proto";

/* Set the freezing period in which the platform will stop creating events and accepting transactions. This is used before safely shut down the platform for maintenance. */
message FreezeTransactionBody {
    int32 startHour = 1; // The start hour (in UTC time), a value between 0 and 23
    int32 startMin = 2; // The start minute (in UTC time), a value between 0 and 59
    int32 endHour = 3; // The end hour (in UTC time), a value between 0 and 23
    int32 endMin = 4; // The end minute (in UTC time), a value between 0 and 59
    FileID updateFile = 5; // The ID of the file needs to be updated during a freeze transaction
    bytes fileHash = 6; // The hash value of the file, used to verify file content before performing freeze and update
}
